# Yogi

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Editor/: CMakeLists.txt  imgui.ini
Editor/Assets/Shaders/ImGui/: ImGui.fs.slang  ImGui.vs.slang
Editor/Include/Layers/: ContentBrowserLayer.h  HierarchyLayer.h  ImGuiBeginLayer.h  ImGuiEndLayer.h  MaterialEditorLayer.h  PipelineEditorLayer.h  RenderPassEditorLayer.h  ViewportLayer.h
Editor/Include/Reflect/: ComponentManager.h  SystemManager.h
Editor/Include/Registry/: AssetRegistry.h
Editor/Include/Utils/: EditorCamera.h  ImGuiBackends.h  ImGuiEnumCombo.h  magic_enum.hpp
Editor/Source/: EditorApp.cpp
Editor/Source/Layers/: ContentBrowserLayer.cpp  HierarchyLayer.cpp  ImGuiBeginLayer.cpp  ImGuiEndLayer.cpp  MaterialEditorLayer.cpp  PipelineEditorLayer.cpp  RenderPassEditorLayer.cpp  ViewportLayer.cpp
Editor/Source/Reflect/: ComponentManager.cpp  SystemManager.cpp
Editor/Source/Registry/: AssetRegistry.cpp
Editor/Source/Utils/: EditorCamera.cpp  ImGuiBackends.cpp
Engine/: CMakeLists.txt
Engine/Assets/Materials/: Default.mat  Shadow.mat  Skybox.mat  Undefined.mat
Engine/Assets/Pipelines/: Default.pipeline
Engine/Assets/RenderPasses/: Default.rp
Engine/Assets/Shaders/: BufferRefs.glsl  DepthPyramid.comp  DepthPyramidFirstMip.comp  DepthReduce.comp  ObjectCull.comp  Skybox.vert  Test.frag  Test.mesh  Test.task  Test.vert
Engine/Assets/Shaders/Materials/: IMaterial.slang  MaterialAttributes.slang  Standard.slang  Unlit.slang
Engine/Assets/Shaders/Passes/: DepthReduce.cs.slang  Meshlet.as.slang  Meshlet.fs.slang  Meshlet.ms.slang  ObjectCull.cs.slang  Outline.fs.slang  Outline.ms.slang  Outline.vs.slang
Engine/Assets/Shaders/Shared/: Bindless.slang  ShaderData.slang  Utils.slang
Engine/Include/: PCH.h  Yogi.h
Engine/Include/Core/: Application.h  EntryPoint.h  EnumFlags.h  Handle.h  Input.h  Layer.h  Log.h  Owner.h  Ref.h  Singleton.h  Timestep.h  Type.h  View.h  WRef.h  Window.h
Engine/Include/Debug/: Instrumentor.h
Engine/Include/Events/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseButtonCodes.h  MouseEvent.h
Engine/Include/Math/: Color.h  MathUtils.h  Matrix.h  Matrix4.h  Quaternion.h  Transform.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
Engine/Include/Renderer/: BindlessTextureManager.h  BindlessTextures.h  DepthPyramid.h  DrawSlotRegistry.h  ForwardRenderSystem.h  FrameUploadArena.h  Material.h  MaterialSchema.h  MaterialSlabUploader.h  Mesh.h  MeshData.h  MeshGPUUploadCache.h  MeshletDrawPass.h  ObjectCullPass.h  PipelineRegistry.h  RenderComponents.h  RenderGraph.h  RenderPass.h  ShaderData.h  StagingArena.h
Engine/Include/Renderer/Passes/: HiZPass.h  MeshletDrawEarlyPass.h  MeshletDrawLatePass.h  MeshletDrawPass.h  MeshletDrawPush.h  ObjectCullClearPass.h  ObjectCullCommon.h  ObjectCullEarlyPass.h  ObjectCullLatePass.h  ObjectCullPass.h  ObjectCullPush.h  OutlinePass.h  OutlinePush.h  RenderPass.h
Engine/Include/Renderer/RHI/: IBuffer.h  ICommandBuffer.h  IDeviceContext.h  IFrameBuffer.h  IPipeline.h  IQueryPool.h  IRenderPass.h  ISampler.h  IShaderResourceBinding.h  ISwapChain.h  ITexture.h  ITextureView.h
Engine/Include/Resources/: AssetManager.h  AssetSerializer.h  FileSystemSource.h  IAssetSource.h  MeshSerializer.h
Engine/Include/Resources/AssetManager/: AssetManager.h  AssetSerializer.h  FileSystemSource.h  IAssetSource.h  MaterialSerializer.h  MeshSerializer.h  ShaderSerializer.h  TextureSerializer.h
Engine/Include/Resources/ResourceManager/: ResourceHash.h  ResourceManager.h
Engine/Include/Scene/: ComponentBase.h  Entity.h  SystemBase.h  World.h
Engine/Source/Runtime/Core/: Application.cpp  Log.cpp
Engine/Source/Runtime/Math/: MathUtils.cpp
Engine/Source/Runtime/Renderer/: BindlessTextureManager.cpp  BindlessTextures.cpp  DepthPyramid.cpp  DrawSlotRegistry.cpp  ForwardRenderSystem.cpp  FrameUploadArena.cpp  Material.cpp  MaterialSchema.cpp  MaterialSlabUploader.cpp  Mesh.cpp  RenderGraph.cpp  (+5 more)
Engine/Source/Shaders/: CMakeLists.txt
editor/: CMakeLists.txt  imgui.ini
editor/src/: editor_app.cpp  editor_camera.cpp  editor_camera.h  editor_camera_controller_system.cpp  editor_camera_controller_system.h  editor_layer.cpp  editor_layer.h  imgui_config.h  imgui_layer.cpp  imgui_layer.h  imgui_setting.cpp  imgui_setting.h
editor/src/panels/: content_browser_panel.cpp  content_browser_panel.h  fontawesome4_header.h  material_editor_panel.cpp  material_editor_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
editor/src/reflect/: component_manager.cpp  component_manager.h  scene_manager.cpp  scene_manager.h  system_manager.cpp  system_manager.h
editor/src/script/: script_manager.cpp  script_manager.h
editor/template/: checkerboard.mat  main.yg  post.mat  test.lua  test.mat  test.yg
engine/: CMakeLists.txt
engine/Include/Events/: Event.h  KeyEvent.h
engine/Include/Math/: MathUtils.h  Vector3.h  Vector4.h
engine/assets/materials/: checkerboard.mat  default.mat  skybox.mat
engine/assets/shaders/: Texture.glsl
engine/src/: engine.h  engine_pch.h
engine/src/core/: application.cpp  application.h  entrypoint.h  input.h  layer.cpp  layer.h  layerstack.cpp  layerstack.h  log.cpp  log.h  orthographic_camera_controller.cpp  window.h
engine/src/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/hazel/: application.cpp  application.h  entrypoint.h  log.cpp  log.h
engine/src/imgui/: imgui_layer.cpp  imgui_layer.h
engine/src/renderer/: buffer.cpp  buffer.h  orthographic_camera.cpp  orthographic_camera_controller.cpp  orthographic_camera_controller.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_api.cpp  renderer_api.h  renderer_command.cpp  renderer_command.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
engine/src/shaders/: CMakeLists.txt
launcher/: CMakeLists.txt
launcher/examples/sandbox/: main.yg  sandbox.lua
launcher/examples/template/: main.yg
launcher/src/: launcher_app.cpp  launcher_layer.cpp  launcher_layer.h
(+326 files in other folders)
